https://trello.com/c/s7xdTBGz/494-ui-header: Ensure height of collapsed menu aligned with LHS.

--- a/ckanext/bpatheme/fanstatic/styles/bpatheme.css
+++ b/ckanext/bpatheme/fanstatic/styles/bpatheme.css
@@ -143,7 +143,6 @@ img#beta {
 
 .dwga-header-row .logo {
     height: auto;
-    /*width: auto;*/
     width: 350px;
 }
 
@@ -509,6 +508,7 @@ body {
 
 .site-parent {
   width: 100%;
+  height: 100%;
   margin-right: 15px;
 }
 
